<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="101dp"
            android:layout_height="95dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/happyfirstlogo" />

        <TextView
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_your_journey"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="154dp"
                    android:id="@+id/txtFirstName"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:layout_alignParentStart="true"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="5dp"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="154dp"
                    android:id="@+id/txtLastName"
                    android:layout_height="wrap_content"
                    android:hint="Surname"
                    android:layout_margin="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    >

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spnrGender"
                        android:layout_width="154dp"

                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDob"
                    android:hint="@string/Dob"
                    android:layout_margin="5dp"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtDob2"
                        android:inputType="none"
                        android:maxLines="1"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtMsisdn"
                android:hint="@string/enter_phone_number"
                android:layout_margin="5dp"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtIdNum"
                android:hint="@string/id_number"
                android:layout_margin="5dp"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"

                app:endIconMode="clear_text" >

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spnrGender2"
                    android:layout_width="154dp"

                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword"
                android:hint="@string/enter_password"
                android:layout_margin="5dp"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"

                app:endIconMode="password_toggle" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/deep_blue"
                android:text="@string/go_login"
                android:textColor="@color/white"
                android:layout_marginTop="14dp"/>

            <TextView
                android:id="@+id/i_have_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_gravity="center"
                android:text="@string/i_have_an_account_login"
                android:textColor="@color/black"
                android:clickable="true"
                android:textSize="18sp"
                android:background="@color/white"
                android:focusable="true" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>